syntax = "proto3";
package echo;
option go_package = "/golang-grpc/echo";

service Echo {
  rpc SayHello (EchoRequest) returns (EchoReply) {}
  rpc SayHelloBidiStream(stream EchoRequest) returns (stream EchoReply) {}    
}

message EchoRequest {
  string message = 1;
  string fromClient = 2;
  int64 transactionCounter = 3;
}

message EchoReply {
  string message = 1;
  string fromServer = 2;
  string toClient = 3;
}